--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-	"name": "divergence/divergence"
+    "name": "divergence/divergence"
     ,"description": "The Divergence Framework."
     ,"keywords": ["framework", "divergence"]
     ,"type": "project"
     ,"require": {
-        "php": ">=5.5.9"
-        ,"dwoo/dwoo": "2.*@beta"
-        ,"filp/whoops": ">=1.1.7"
+        "php": ">=7.2.0"
+        ,"dwoo/dwoo": "1.3.6"
+        ,"filp/whoops": ">=2.1.14"
     }
     ,"autoload": {
 	    "psr-4": {
