--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,35 @@
 language: php
 php:
   - '7.1'
+  - '7.2'
+
+install:
+    # Install composer packages
+  - travis_retry composer install --no-interaction --no-suggest
+  # Install coveralls.phar
+  - wget -c -nc --retry-connrefused --tries=0 https://github.com/php-coveralls/php-coveralls/releases/download/v2.0.0/php-coveralls.phar -O coveralls.phar
+  - chmod +x coveralls.phar
+  - php coveralls.phar --version
+
 before_script:
-    - composer install
-script: phpunit
+    - mkdir -p build/logs
+    - ls -al
+
+script:
+  - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+
+after_success:
+# Submit coverage report to Coveralls servers, see .coveralls.yml
+ - travis_retry php coveralls.phar -v
+# Submit coverage report to codecov.io
+ - bash <(curl -s https://codecov.io/bash)
+
+ # Tell Travis CI to monitor only 'master' branch
+branches:
+  only: master
+
+# Specify where the cache is so you can delete it via the travis-ci web interface
+cache:
+  directories:
+  - vendor
+  - $HOME/.cache/composer
