--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,13 @@
 {
-    "name": "divergence/divergence"
-    ,"description": "The Divergence Framework."
-    ,"keywords": ["framework", "divergence"]
-    ,"type": "project"
-    ,"require": {
-        "php": ">=7.0"
-        ,"dwoo/dwoo": "1.3.6"
-        ,"filp/whoops": ">=2.1.14"
+    "name": "divergence/divergence",
+    "description": "The Divergence Framework.",
+    "keywords": ["framework", "divergence"],
+    "type": "project",
+    "require": {
+        "php": ">=7.1",
+        "dwoo/dwoo": "1.3.6",
+        "filp/whoops": ">=2.1.14",
+        "symfony/var-dumper": "^4.0"
     }
     ,"autoload": {
 	    "psr-4": {
