--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,20 @@ php:
   - '7.1'
   - '7.2'
 
+addons:
+  apt:
+    sources:
+      - mysql-5.7-trusty
+    packages:
+      - mysql-server
+      - mysql-client
+
+before_install:
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('divergence_tests') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade
+  - sudo service mysql restart
+  - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
+
 install:
     # Install composer packages
   - travis_retry composer install --no-interaction --no-suggest
