--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ addons:
       - mysql-client
 
 before_install:
-  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('divergence_tests') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
-  - sudo mysql_upgrade
-  - sudo service mysql restart
+  #- sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('divergence_tests') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  #- sudo mysql_upgrade
+  #- sudo service mysql restart
   - mysql -e 'CREATE DATABASE IF NOT EXISTS test;'
 
 install:
