Cleaner DB testing stuff
use Divergence\Tests\TestUtils::requireDB($this) in a test to make sure it gets marked skipped if a database is not available while still allowing all other tests to go through.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Divergence\\Tests\\": "tests/"
+            "Divergence\\Tests\\": "tests/Divergence"
         }
     },
     "require-dev": {
@@ -27,6 +27,6 @@
     },
     "scripts": {
         "fix-code": "php-cs-fixer fix",
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
     }
 }
