--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "friendsofphp/php-cs-fixer": "*",
-        "mikey179/vfsStream": "1.6.5"
+        "mikey179/vfsStream": "1.6.5",
+        "fzaninotto/faker": "1.7.1"
     },
     "scripts": {
         "fix-code": "php-cs-fixer fix",
