--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,18 @@
 {
     "name": "divergence/divergence",
     "description": "The Divergence Framework.",
-    "keywords": ["framework", "divergence"],
+    "keywords": ["framework", "divergence","activerecord","orm"],
     "type": "project",
+    "version": "1.0-beta",
+    "homepage": "https://packagist.org/packages/divergence/divergence",
+    "authors": [
+        {
+            "name": "Henry Paradiz",
+            "email": "henry.paradiz@gmail.com",
+            "homepage": "https://henryparadiz.com",
+            "role": "Developer"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "dwoo/dwoo": "1.3.6",
@@ -30,5 +40,6 @@
     "scripts": {
         "fix-code": "php-cs-fixer fix",
         "test": "vendor/bin/phpunit --coverage-clover build/logs/clover.xml"
-    }
+    },
+    "license": "MIT"
 }
