--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "dwoo/dwoo": "1.3.6",
         "filp/whoops": ">=2.1.14",
         "symfony/var-dumper": "^4.0"
-    }
-    ,"autoload": {
+    },
+    "autoload": {
 	    "psr-4": {
 		    "App\\": "classes/App"
 		    ,"Divergence\\": "classes/Divergence"
