--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     },
     "autoload": {
 	    "psr-4": {
-		    "App\\": "classes/App",
-		    "Divergence\\": "classes/Divergence"
+		    "Divergence\\": "src"
 	    }
     },
     "autoload-dev": {
