--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": ">=7.1",
         "dwoo/dwoo": "1.3.6",
-        "filp/whoops": ">=2.1.14",
+        "filp/whoops": "*",
         "symfony/var-dumper": "^4.0"
     },
     "autoload": {
