Change .htaccess bootstrap

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*) ../Divergence/router.php [L,QSA]
+RewriteRule ^(.*) index.php [L,QSA]
