Major Update  - Convert default template Engine from Dwoo to Twig  - Converted static controllers to Psr7 style responders while retaining tree structure routing.  - Updated php-cs-fixer config  - Tests are completely broken.

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,5 +1,14 @@
 <?php
 
+$header = <<<EOF
+This file is part of the Divergence package.
+
+(c) Henry Paradiz <henry.paradiz@gmail.com>
+
+For the full copyright and license information, please view the LICENSE
+file that was distributed with this source code.
+EOF;
+
 $finder = PhpCsFixer\Finder::create()
     //->exclude('somedir')
     ->in(__DIR__)
@@ -11,12 +20,20 @@ return PhpCsFixer\Config::create()
         '@PSR2' => true,
         'array_syntax' => ['syntax' => 'short'],
         'trailing_comma_in_multiline_array' => true,
+        'no_trailing_comma_in_singleline_array' => true,
         'ternary_operator_spaces' => true,
         'trim_array_spaces' => true,
         'ordered_imports' => [
             'sortAlgorithm' => 'length'
         ],
-        'ordered_class_elements' => true
+        'ordered_class_elements' => true,
+        'indentation_type' => true,
+        'header_comment' => [
+            'header' => $header,
+            'comment_type' => 'PHPDoc',
+            'location' => 'after_open',
+            'separate' => 'none',
+        ]
     ])
-    ->setFinder($finder)
+    ->setFinder($finder)   
 ;
