--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7.0",
         "friendsofphp/php-cs-fixer": "*",
-        "mikey179/vfsstream": "1.6.5",
-        "fzaninotto/faker": "1.7.1"
+        "mikey179/vfsstream": "^1.6",
+        "fzaninotto/faker": "^1.9"
     },
     "suggest": {
         "divergence/cli": "Lets you initialize a new project as well as create, edit, and test database configurations via CLI."
