--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 addons:
   apt:
     sources:
-      - mysql-5.7-trusty
+      - mysql-5.7
     packages:
       - mysql-server
       - mysql-client
