--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: php
 php:
   - '7.4'
 
+services:
+  - mysql
+
 addons:
   apt:
-    sources:
-      - mysql-5.7
+    #sources:
+    #  - mysql-5.7-trusty
     packages:
       - mysql-server
       - mysql-client
