--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,13 +1,9 @@
 build:
   image: default-bionic
   environment:
-      php: 8.1.12
+    php: 8.1.12
   nodes:
-    analysis:
-      dependencies:
-        after:
-        - composer require --dev "squizlabs/php_codesniffer=3.7.2"
-    coverage:
+    node-with-auto-setup:
       tests:
         override:
           - command: ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
@@ -15,3 +11,4 @@ build:
               file: build/logs/clover.xml   # <- Set this to where we find the coverage data.
                                           #    The path is relative to the current directory.
               format: clover
+          - true
