--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,10 +9,12 @@ build:
     php: 8.1.12
   nodes:
     coverage:
-      - command: ./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml  # Or "./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml"
-        coverage:
-          file: 'build/coverage/clover.xml'
-          format: 'php-clover'
+      tests:
+        override:
+          - command: ./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml  # Or "./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml"
+            coverage:
+              file: 'build/coverage/clover.xml'
+              format: 'php-clover'
     analysis:
       tests:
         override:
