--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,8 +7,12 @@ build:
   image: default-bionic
   environment:
     php: 8.1.12
+    variables:
+      XDEBUG_MODE: 'coverage'
   nodes:
     coverage:
+      services:
+        mariadb: 15
       tests:
         override:
           - command: ./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml  # Or "./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml"
