--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,6 +13,9 @@ build:
     coverage:
       services:
         mariadb: 10.6.12
+      dependencies:
+        before:
+          - mysql -u root -e "CREATE DATABASE IF NOT EXISTS test CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;"
       tests:
         override:
           - command: ./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml  # Or "./vendor/bin/phpunit --coverage-clover=build/coverage/clover.xml"
