--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -13,7 +13,7 @@ build:
     coverage:
       services:
         mariadb: 10.6.12
-        volumes:
+        ramdisks:
           - /var/run/mysqld:/var/run/mysqld
       dependencies:
         before:
