--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -14,6 +14,8 @@ build:
       services:
         mariadb:
             image: docker.io/library/mariadb:10.6.12
+            env:
+              MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: yes
             ports:
                 - 3306
             ramdisks:
